--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^4.3.0
   firebase_messaging: ^16.1.0
   flutter_local_notifications: ^19.5.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
